--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "echarts": "^4.1.0",
     "iview": "^3.0.1",
+    "qs": "^6.6.0",
     "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "vue": "^2.6.6",
@@ -27,6 +29,7 @@
     "less-loader": "^4.0.6",
     "style-loader": "^0.23.1",
     "stylus-loader": "^3.0.2",
+    "swiper": "^4.5.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-element-ui": "^1.1.4",
     "vue-cli-plugin-iview": "^1.0.6",
